[package]
name = "miniscript-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
hex = "0.4"
miniscript = { version = "12.0", features = ["compiler", "std"] }
bitcoin = "0.32"
regex = "1.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"