[package]
name = "miniscript-wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "miniscript_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
hex = "0.4"
miniscript = { version = "12.0", features = ["compiler", "std"] }
bitcoin = "0.32"
regex = "1.5"
lazy_static = "1.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "s"